Bug with wrong <a> tag displaying fixed

--- a/web/package.json
+++ b/web/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "puppeteer": "^7.1.0",
+    "puppeteer-core": "^8.0.0",
     "puppeteer-firefox": "^0.5.1"
   }
 }
